ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
spec:
  selector:
    matchLabels:
      name: synapse-nginx
  template:
    metadata:
      labels:
        name: synapse-nginx
    spec:
      serviceAccountName: ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
