service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-service
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
